<resources>
    <string name="app_name">My Cartoleria</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Welcome</string>


    <string name="benvenuti">Benvenuti sulla vosta cartoleria a portata di mano</string>
    <string name="intro">Accedi o registarti per visualizzare tutte le offerte</string>
    <string name="registrati">registrati</string>
    <string name="accedi">accedi</string>
    <string name="title_activity_welcome">WelcomeActivity</string>

    <string name="cerca">cerca</string>
    <string name="profilo">profilo</string>
    <string name="categorie">categorie</string>
    <string name="carrello">carrello</string>
    <string name="creazioni">creazioni</string>
    <string name="cerca_il_tuo_articolo">Cerca il tuo articolo</string>
    <string name="not_find">Nessun elemento trovato</string>
    <string name="no_search">Non hai inserito nessun elemento nella ricerca</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="intro_creazioni">Scegli tra le nostre creazioni e ordina il tuo prodotto personalizzato</string>
    <string name="ordina">ordina</string>
    <string name="preferito">preferito</string>
    <string name="description">inserisci la tua mail per registrarti</string>
    <string name="hint_mail">Inserisci la tua mail</string>
</resources>