<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_cyan"
    tools:context=".HomeFragment">


    <Button
        android:id="@+id/button_cerca"
        style="@style/button"
        android:layout_width="@dimen/button_home_margin_width"
        android:layout_height="@dimen/button_home_margin_height"
        android:layout_marginTop="@dimen/button_home_marginTop"
        android:text="@string/cerca"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_profilo"
        style="@style/button"
        android:layout_width="@dimen/button_home_margin_width"
        android:layout_height="@dimen/button_home_margin_height"
        android:layout_marginTop="@dimen/button_home_marginTop"
        android:text="@string/profilo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_cerca" />

    <Button
        android:id="@+id/button_categorie"
        style="@style/button"
        android:layout_width="@dimen/button_home_margin_width"
        android:layout_height="@dimen/button_home_margin_height"
        android:layout_marginTop="@dimen/button_home_marginTop"
        android:text="@string/categorie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_profilo" />

    <Button
        android:id="@+id/button_carrello"
        style="@style/button"
        android:layout_width="@dimen/button_home_margin_width"
        android:layout_height="@dimen/button_home_margin_height"
        android:layout_marginTop="@dimen/button_home_marginTop"
        android:text="@string/carrello"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_categorie" />

    <Button
        android:id="@+id/button_creazioni"
        style="@style/button"
        android:layout_width="@dimen/button_home_margin_width"
        android:layout_height="@dimen/button_home_margin_height"
        android:layout_marginTop="@dimen/button_home_marginTop"
        android:text="@string/creazioni"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_carrello" />

</androidx.constraintlayout.widget.ConstraintLayout>