<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/light_cyan"
    tools:context=".CraetionFragment">



    <ImageView
        android:id="@+id/presepe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:scaleType="fitCenter"
        android:src="@drawable/presepe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/intro_creazioni" />

    <TextView
        android:id="@+id/intro_creazioni"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro_creazioni"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@color/steel_blue"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/button_ordina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ordina"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        app:layout_constraintTop_toBottomOf="@id/presepe"
        app:layout_constraintStart_toEndOf="@id/button_preferito"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_preferito"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preferito"
        android:textAllCaps="true"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/presepe"
        app:layout_constraintEnd_toStartOf="@id/button_ordina"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>